# modalizer

./: README.md  pyproject.toml
data/: hamlet.txt  presidential_debate1.txt  presidential_debate2.txt  presidential_debate3.txt
modalizer/: classifications.py  dictionaries.py  main.py
tests/: test_classification.py  test_dictionaries.py  test_main.py
